# SROSConfigGen

./: .gitignore  README.md  pyproject.toml
output/: readme.md
src/: ip_plan_generator.py  main.py
src/utils/: treeparser.py
templates/: master.jinja2
templates/cards/: main.jinja2
templates/log/: accouting.jinja2  file_id.jinja2  filter.jinja2  log_id.jinja2  main.jinja2  snmp.jinja2  syslog.jinja2
templates/system/: login-control.jinja2  main.jinja2  security.jinja2
values/: master.jinja2
values/cards/: main.yaml
values/log/: main.yaml
values/system/: main.yaml  security.yaml
