[tool.poetry]
name = "srosconfiggen"
version = "0.1.0"
description = ""
authors = ["Leonardo Monteiro <decastromonteiro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.3.1"
Jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
